Quorum3/Library/Tests/Templating/Pass/PassNumberTakesText_13.quorum
class Main
    action Main
        Test<text> something
        something:doSomething(7.5)
    end
end