Quorum3/Library/Tests/Templating/Fail/IteratorWrongTemplate.quorum
use Libraries.Containers.List 
use Libraries.Containers.Iterator 
use Libraries.Containers.Array

class Main
    List<Array<integer>> list 

    action Main 
        Iterator<integer> iterator = list:GetIterator() 
        integer x = 0 
        x = iterator:Next() 
    end
end